# sanstext

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
sanstext/: __init__.py  __main__.py  core.py  sound.py
sanstext.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
